# Muninn

./: .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  muninn.toml
.github/workflows/: ci.yml
proto/: muninn.proto
src/actors/: aggregator.pony
src/api/: go.mod  history.go  main.go
src/array/: transforms.bqn  uiua_metrics.ua
src/c3fmt/: format.c3
src/config/: config.nim  heartbeat.nim
src/core/: build.zig
src/core/src/: disk.zig  main.zig  metrics.zig
src/dsl/: config.fnl
src/embed/: muninn.wren
src/fanout/: gleam.toml
src/fanout/src/: fanout.gleam
src/fx/: middleware.kk
src/grain_wasm/: plugin.gr
src/infer/: alerts.pl
src/julia_layer/: analysis.jl
src/legacy/: muninn.tcl
src/logs/: aggregator.cr
src/micro/: muninn.fs
src/net/: Cargo.toml
src/net/src/: main.rs  nats.rs
src/parallel/: aggregator.chpl
src/parse/: logparse.awk
src/pipeline/: main.roc
src/plugins/: host.lua
src/plugins/example/: cpu_spike.lua
src/proctree/: proctree.v
src/proto_io/: plugin.io
src/rules/: dune  dune-project  rule_engine.ml
src/script/: dashboard.janet
src/shell/: muninn.elv
src/stack/: muninn.factor
src/stats/: analysis.d  dub.json
src/syscall/: proctree.ha
src/tui/: input.odin  main.odin  render.odin  termios.odin
src/wasm/: plugin.mbt
src/watchdog/: watchdog.adb
