[package]
name        = "muninn-net"
version     = "0.1.0"
edition     = "2021"
description = "Muninn network interface monitor — per-packet stats via /proc/net"
license     = "GPL-3.0-or-later"

[dependencies]
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["full"] }
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "muninn-net"
path = "src/main.rs"
